[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "log-analysis-incident-response"
version = "1.0.0"
description = "Autonomous Log Analysis & Incident Response Environment"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.3",
    "openai==1.57.2",
    "pyyaml==6.0.2",
    "httpx==0.28.0",
    "openenv-core>=0.2.0",
]

[project.scripts]

server = "server.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["environment*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]
